--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -2,71 +2,83 @@
 
 
 {% block body_block %}
+    <div class="jumbotron gp-jumbotron">
+        <h1>Welcome {{ user.username }}!</h1>
+    </div>
 
     {% if user.is_authenticated %}
-        <a href="/app1/{{ division_name_slug }}/add_page/" class="btn btn-primary btn-block">Add a new Place to this
+        <div class="gp-center">
+            <a href="/app1/{{ division_name_slug }}/add_page/" class="btn btn-lg btn-primary">Add a new Place to this
             Division</a>
+        </div>
     {% endif %}
-    {% if division %}
-        <h1>{{ division_name_name }}</h1>
 
-        {% if page_list %}
-            {% for page in page_list %}
+    <div class="container-fluid gp-container-normal">
 
-                <div class="container gp-div-post-summery">
-                    {% if page.pages.all.exists %}
-                        <div class="gp-slide-show">
-                            <div id="myCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
-                                 data-ride="carousel">
-                                <!-- Wrapper for slides -->
-                                <div class="carousel-inner" role="listbox">
-                                    {% for image_obj in page.pages.all %}
+        {% if division %}
+            <h1>{{ division_name_name }}</h1>
 
-                                        {% if forloop.first %}
-                                            <div class="item active">
-                                                <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
-                                            </div>
-                                        {% else %}
-                                            <div class="item">
-                                                <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
-                                            </div>
-                                        {% endif %}
+            {% if page_list %}
+                {% for page in page_list %}
 
-                                    {% endfor %}
-                                </div>
-                                <!-- Left and right controls -->
-                                <a class="left carousel-control" id="gp-carousel-control"
-                                   href="#myCarousel{{ forloop.counter }}" role="button"
-                                   data-slide="prev">
+                    <div class="container gp-div-post-summery">
+                        {% if page.pages.all.exists %}
+                            <div class="gp-slide-show">
+
+                                <div class="gp-slide-shadow"></div>
+                                <div id="myCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                                     data-ride="carousel">
+                                    <!-- Wrapper for slides -->
+                                    <div class="carousel-inner" role="listbox">
+                                        {% for image_obj in page.pages.all %}
+
+                                            {% if forloop.first %}
+                                                <div class="item active">
+                                                    <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
+                                                </div>
+                                            {% else %}
+                                                <div class="item">
+                                                    <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
+                                                </div>
+                                            {% endif %}
+
+                                        {% endfor %}
+                                    </div>
+                                    <!-- Left and right controls -->
+                                    <a class="left carousel-control" id="gp-carousel-control"
+                                       href="#myCarousel{{ forloop.counter }}" role="button"
+                                       data-slide="prev">
                                 <span class="glyphicon glyphicon-chevron-left"
                                       aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="right carousel-control" id="gp-carousel-control"
-                                   href="#myCarousel{{ forloop.counter }}" role="button"
-                                   data-slide="next">
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="right carousel-control" id="gp-carousel-control"
+                                       href="#myCarousel{{ forloop.counter }}" role="button"
+                                       data-slide="next">
                                 <span class="glyphicon glyphicon-chevron-right"
                                       aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
                             </div>
+                        {% endif %}
+
+                        <div class="gp-desc">
+                            <h4 class="card-title">{{ page.name }}</h4>
+                            <p class="card-text">{{ page.des }}</p>
+                            <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary btn-block">View Tour
+                                Plans</a>
                         </div>
-                    {% endif %}
-
-                    <div class="gp-desc">
-                        <h4 class="card-title">{{ page.name }}</h4>
-                        <p class="card-text">{{ page.des }}</p>
-                        <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary btn-block">View Tour
-                            Plans</a>
                     </div>
-                </div>
 
-            {% endfor %}
+                {% endfor %}
 
+            {% else %}
+                <h1 class="gp-page-title">No place currently in this Division.</h1>
+            {% endif %}
         {% else %}
-            <h1 class="gp-page-title">No place currently in this Division.</h1>
+            <h1 class="gp-page-title">The specified division -> {{ division_name }} does not exist!</h1>
         {% endif %}
-    {% else %}
-        <h1 class="gp-page-title">The specified division -> {{ division_name }} does not exist!</h1>
-    {% endif %}
+
+    </div>
 {% endblock %}
