--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -2,6 +2,7 @@
 
 
 {% block body_block %}
-<h1>Logged Out</h1>
-        <p>You are now logged out.</p>
+    <div class="jumbotron gp-jumbotron">
+        <h1>You are now Logged Out!</h1>
+    </div>
 {% endblock %}
