--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -1,129 +1,177 @@
 {% extends 'app1/base.html' %}
 
 {% block body_block %}
-
-    <h1 class="gp-page-title">Welcome to Bangladesh Travel Magazine </h1>
-
-    <h2>Have A Travel Query ? Ask Here </h2>
-
-    <form class="gp-form" role="form" id="question_form" method="post" action="{% url 'save_question' %}">
-        {% csrf_token %}
-        {% for hidden in q_form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
-        {% for field in q_form.visible_fields %}
-            <div class="form-group">
-                <p class="required">{{ field.help_text }}</p>
-                {{ field.errors }}
-                {{ field }}
-            </div>
-        {% endfor %}
-        <button class="btn btn-primary" type="submit" name="submit">Post</button>
-    </form>
-
-    <h2>Recently Asked Questions are: </h2>
-
-    <div class="Question_show">
-        {% if question_list %}
-            {% for obj in question_list %}
-                <div id="q{{ forloop.counter0 }}">
-                    <h4>{{ obj.created }}</h4>
-                    <h3>{{ obj.question }}</h3>
-                    {% if obj.answers.all.exists %}
-
-                        <h2>Total {{ obj.answers.all.count }} answer Found </h2>
-                        {% for obj2 in obj.answers.all %}
-
-                            <h4>{{ obj2.text }}</h4>
-                            <h4>{{ obj2.created }}</h4>
-                        {% endfor %}
-                    {% else %}
-                        <h2>No answer found yet</h2>
-                    {% endif %}
-                    <form method="POST" role="form" id="answer_form" class="gp-form"
-                          action="{% url 'save_answer' obj.id %}">
-                        {% csrf_token %}
-                        {% for hidden in a_form.hidden_fields %}
-                            {{ hidden }}
-                        {% endfor %}
-                        <textarea cols="40" id="id_text" maxlength="500" name="text" rows="1" required=""></textarea>
-                        <button class="btn btn-primary" type="submit" name="submit">Post</button>
-                    </form>
-                </div>
-            {% endfor %}
-        {% else %}
-            <h2>No Questions asked Yet</h2>
-        {% endif %}
+    <div class="jumbotron gp-jumbotron">
+        <h1>Welcome {{ user.username }}!</h1>
     </div>
 
-    <h2 class="gp-text-normal-bigger gp-text-center">Most recently Active Locations</h2>
-    {% if page_list %}
-        <!-- trending list start-->
-        {% for page in page_list %}
+    <div class="container-fluid gp-container-normal">
 
-            <div class="container gp-div-post-summery">
+        <div class="row">
+            <div class="col-sm-8">
 
-                <div class="gp-slide-show">
+                {#                <h2 class="gp-text-normal-bigger gp-text-center">Most recently Active Locations</h2>#}
+                {% if page_list %}
+                    <!-- trending list start-->
+                    {% for page in page_list %}
 
-                    <!-- image part for each page -->
-                    {% if page.pages.all.exists %}
-                        {#                    <br>#}
-                        <div id="gp-Carousel{{ forloop.counter }}" class="carousel slide gp-carousel"
-                             data-ride="carousel">
-                            <!-- Wrapper for slides -->
-                            <div class="carousel-inner" role="listbox">
+                        <div class="container-fluid gp-div-post-summery">
 
-                                <!-- showing every image in that page -->
-                                {% for image_obj in page.pages.all %}
 
-                                    {% if forloop.first %}
-                                        <div class="item active">
-                                            <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
+                            <!-- image part for each page -->
+                            {% if page.pages.all.exists %}
+
+                                <div class="gp-slide-show">
+
+                                    <div class="gp-slide-shadow"></div>
+                                    <div id="gp-Carousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                                         data-ride="carousel">
+                                        <!-- Wrapper for slides -->
+                                        <div class="carousel-inner" role="listbox">
+
+                                            <!-- showing every image in that page -->
+                                            {% for image_obj in page.pages.all %}
+
+                                                {% if forloop.first %}
+                                                    <div class="item active">
+                                                        <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
+                                                    </div>
+                                                {% else %}
+                                                    <div class="item">
+                                                        <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
+                                                    </div>
+                                                {% endif %}
+
+                                            {% endfor %}
                                         </div>
-                                    {% else %}
-                                        <div class="item">
-                                            <img class="card-img-top gp-card-img" src="{{ image_obj.file.url }}">
-                                        </div>
-                                    {% endif %}
+                                        <!-- Left and right controls -->
+                                        <a class="left carousel-control" id="gp-carousel-control"
+                                           href="#gp-Carousel{{ forloop.counter }}" role="button"
+                                           data-slide="prev">
+                                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="right carousel-control" id="gp-carousel-control"
+                                           href="#gp-Carousel{{ forloop.counter }}" role="button"
+                                           data-slide="next">
+                                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </div>
+                                    {#                                {% else %}#}
+                                    {#                                    <p class="gp-post-no-image-text">No images Shared Yet!</p>#}
 
-                                {% endfor %}
+                                </div>
+                            {% endif %}
+
+
+                            <div class="gp-desc">
+
+                                <h4 class="card-title">{{ page.name }}</h4>
+                                <p class="card-text">{{ page.des }}</p>
+                                <div class="gp-button-panel">
+                                    <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary">View Tour Plan</a>
+                                </div>
                             </div>
-                            <!-- Left and right controls -->
-                            <a class="left carousel-control" id="gp-carousel-control"
-                               href="#gp-Carousel{{ forloop.counter }}" role="button"
-                               data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="right carousel-control" id="gp-carousel-control"
-                               href="#gp-Carousel{{ forloop.counter }}" role="button"
-                               data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
+
                         </div>
-                    {% else %}
-                        <p class="gp-post-no-image-text">No images Shared Yet!</p>
-                    {% endif %}
 
-                </div>
-
-                <div class="gp-desc">
-
-                    <h4 class="card-title">{{ page.name }}</h4>
-                    <p class="card-text">{{ page.des }}</p>
-                    <div class="gp-button-panel">
-                        <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary">View Tour Plan</a>
-                    </div>
-                </div>
+                    {% endfor %}
+                {% else %}
+                    <h2><strong>Looks like people are not going Anywhere!</strong></h2>
+                {% endif %}
 
             </div>
-            {#            <hr>#}
 
-        {% endfor %}
-    {% else %}
-        {#        <br>#}
-        <h2><strong>Looks like people are not going Anywhere!</strong></h2>
-    {% endif %}
+            {# ------------------------------------------------------------ #}
+
+
+            <div class="col-sm-4 gp-side-panel-container">
+
+                <div class="gp-side-panel">
+                    <div class="gp-side-panel-title">
+                        Have A Travel Query?
+                    </div>
+
+                    <form class="gp-side-panel-form" role="form" id="question_form" method="post" action="{% url 'save_question' %}">
+                        {% csrf_token %}
+                        {% for hidden in q_form.hidden_fields %}
+                            {{ hidden }}
+                        {% endfor %}
+                        {% for field in q_form.visible_fields %}
+                            <div class="form-group">
+                                <p class="required">{{ field.help_text }}</p>
+                                {{ field.errors }}
+                                {{ field }}
+                            </div>
+                        {% endfor %}
+                        <button class="btn btn-primary btn-block" type="submit">Ask</button>
+                    </form>
+                </div>
+
+                <hr>
+
+                <div class="gp-side-panel">
+                    <div class="gp-side-panel-title">
+                        Recently Asked Questions
+                    </div>
+
+                    <div class="gp-side-panel-content">
+                        {% if question_list %}
+                            {% for obj in question_list %}
+                                <div class="gp-ques-ans-panel-block" id="q{{ forloop.counter0 }}">
+                                    <div class="gp-ques-block">
+                                        <h2 class="gp-ques-title">{{ obj.question }}</h2>
+                                        <p class="gp-ques-date">{{ obj.created }}</p>
+                                    </div>
+
+                                    <div class="gp-ques-ans">
+
+                                        {% if obj.answers.all.exists %}
+                                            <p class="gp-ques-ans-count">Total {{ obj.answers.all.count }} answer found!</p>
+
+                                            {% for obj2 in obj.answers.all %}
+                                                <div class="gp-ques-ans-block">
+                                                    <h3 class="gp-ques-ans-text">{{ obj2.text }}</h3>
+                                                    <p class="gp-ques-ans-date">{{ obj2.created }}</p>
+                                                </div>
+                                            {% endfor %}
+
+                                        {% else %}
+                                            <p class="gp-ques-ans-count">No answer found yet!</p>
+                                        {% endif %}
+
+                                    </div>
+
+                                    <form method="POST" role="form" id="answer_form" class="gp-side-panel-form"
+                                          action="{% url 'save_answer' obj.id %}">
+                                        {% csrf_token %}
+                                        {% for hidden in a_form.hidden_fields %}
+                                            {{ hidden }}
+                                        {% endfor %}
+                                        <div class="form-group">
+
+                                            <textarea placeholder="Have you the answer?" class="form-control" cols="40" id="id_text" maxlength="500" name="text"
+                                                      rows="1" required=""></textarea>
+
+                                        </div>
+                                        <button class="btn btn-primary btn-block" type="submit" name="submit">Give Answer</button>
+                                    </form>
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            <h2>No Questions asked Yet</h2>
+                        {% endif %}
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+
+
 
 {% endblock %}
