--- a/templates/app1/story.html
+++ b/templates/app1/story.html
@@ -2,137 +2,163 @@
 
 {% block body_block %}
 
-    <a href="{% url 'story_share' division page %}" class="btn btn-primary btn-block">Share Your Tour Story</a>
+
+
     {% if stories %}
 
-        <h1 class="gp-page-title">Total {{ stories.count }} stories shared about {{ page }}!</h1>
+        <div class="jumbotron gp-jumbotron">
+            <h1>Total {{ stories.count }} stories shared about {{ page }}!</h1>
+        </div>
+
+        <div class="gp-center">
+            <a href="{% url 'story_share' division page %}" class="btn btn-lg btn-primary">Share Your Tour Story</a>
+        </div>
+
+        <div class="container-fluid gp-container-normal">
 
         {% for obj in stories %}
 
-            <div class="container gp-div-post-full">
-            <div class="gp-slide-show">
+            <div class="gp-div-post-full">
+
                 {% if obj.stories.all.exists %}
-                    <div id="myCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
-                         data-ride="carousel">
-                        <!-- Wrapper for slides -->
 
-                        <div class="carousel-inner" role="listbox">
+                    <div class="gp-slide-show">
+                        <div class="gp-slide-shadow"></div>
+                        <div id="myCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                             data-ride="carousel">
+                            <!-- Wrapper for slides -->
 
-                            {% for obj2 in  obj.stories.all %}
-                                <div class="item {% if forloop.first %}active{% endif %}">
-                                    <img class="card-img-top gp-card-img" src="{{ obj2.file.url }}"
-                                         alt="IMAGE GOES HERE">
-                                </div>
-                            {% endfor %}
+                            <div class="carousel-inner" role="listbox">
 
+                                {% for obj2 in  obj.stories.all %}
+                                    <div class="item {% if forloop.first %}active{% endif %}">
+                                        <img class="card-img-top gp-card-img" src="{{ obj2.file.url }}">
+                                    </div>
+                                {% endfor %}
+
+                            </div>
+                            <!-- Left and right controls -->
+                            <a class="left carousel-control" id="gp-carousel-control"
+                               href="#myCarousel{{ forloop.counter }}"
+                               role="button"
+                               data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" id="gp-carousel-control"
+                               href="#myCarousel{{ forloop.counter }}"
+                               role="button"
+                               data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
-                        <!-- Left and right controls -->
-                        <a class="left carousel-control" id="gp-carousel-control"
-                           href="#myCarousel{{ forloop.counter }}"
-                           role="button"
-                           data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="right carousel-control" id="gp-carousel-control"
-                           href="#myCarousel{{ forloop.counter }}"
-                           role="button"
-                           data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
                     </div>
-                {% else %}
-                    <p class="gp-post-no-image-text">No images shared by <strong>{{ obj.user }}</strong>.</p>
+                    {#                    {% else %}#}
+                    {#                        <p class="gp-post-no-image-text">No images shared by <strong>{{ obj.user }}</strong>.</p>#}
                 {% endif %}
-            </div>
 
-            <div class="gp-desc">
-                <h4 class="card-title">{{ obj.title_name }}</h4>
-                <p class="card-text-date">{{ obj.created_date }}</p>
-                <p class="card-text-author">Tour by <a
-                        href="{% url 'user_profile' obj.user %}">{{ obj.user }}</a> with
-                    <strong>{{ obj.member }}</strong> members.</p>
-                <p><strong>Budget:</strong>{{ obj.budget }}</p>
-                <p><strong>Type:</strong>{{ obj.type_name }}</p>
-                <p class="card-text">
-                    {% if obj.des|length > 50 %}
-                        {{ obj.des|linebreaks|safe|truncatewords:"50" }}
-                        <a href="{% url 'story_detail' obj.id %}">Read Full Story</a>
-                    {% else %}
-                        {{ obj.des|linebreaks|safe }}
-                    {% endif %}
+                <div class="gp-desc">
+                    <h4 class="card-title">{{ obj.title_name }}</h4>
+                    <p class="card-text-date">{{ obj.created_date }}</p>
+                    <p class="card-text-author">Tour by <a
+                            href="{% url 'user_profile' obj.user %}">{{ obj.user }}</a> with
+                        <strong>{{ obj.member }}</strong> members.</p>
+                    <p class="card-budget"><strong>Budget:</strong> {{ obj.budget }}</p>
+                    <p class="card-type"><strong>Type:</strong> {{ obj.type_name }}</p>
+                    <p class="card-text">
+                        {% if obj.des|length > 50 %}
+                            {{ obj.des|linebreaks|safe|truncatewords:"50" }}
+                            <a href="{% url 'story_detail' obj.id %}">Read Full Story</a>
+                        {% else %}
+                            {{ obj.des|linebreaks|safe }}
+                        {% endif %}
 
-                </p>
-            </div>
-            <div class="gp-util-bar">
-                <div class="gp-div-half">
-                    <a id="likes" data-id="{{ obj.id }}" class="gp-like-button">
+                    </p>
+                </div>
+                <div class="gp-util-bar">
+                    <div class="gp-div-half">
+                        <a id="likes" data-id="{{ obj.id }}" class="gp-like-button">
                             <span id="gp-like-logo-{{ obj.id }}"
                                   class="glyphicon {% if obj.id in like_list %}glyphicon glyphicon-heart {% else %} glyphicon-heart-empty {% endif %}"></span>
-                        <span id="gp-total-like-{{ obj.id }}">{{ obj.total_likes }}</span>
-                    </a>
-                </div>
-                <div class="gp-div-half">
-                    <a class="gp-share"><span class="glyphicon glyphicon-share-alt"></span> Share</a>
-                </div>
-            </div>
-
-            <!-- Comment show start -->
-            <div class="gp-comment-group">
-                <div class="gp-total-comments">
-
-                    <button onclick="toggleDiv({{ forloop.counter }})" class="btn btn-primary">
-                        Total {{ obj.comments.count }} comments.
-                    </button>
+                            <span id="gp-total-like-{{ obj.id }}">{{ obj.total_likes }}</span>
+                        </a>
+                    </div>
+                    <div class="gp-div-half">
+                        <a class="gp-share"><span class="glyphicon glyphicon-share-alt"></span> Share</a>
+                    </div>
                 </div>
 
-                <div id={{ forloop.counter }}>
-                    {% for comment in obj.comments.all %}
-                        <div class="gp-comment">
-                            <p class="gp-username"><a
-                                    href="{% url 'user_profile' comment.author.username %}">{{ comment.author.username }}</a>
-                            </p>
-                            <p class="gp-date">{{ comment.created_date }}</p>
-                            <p class="gp-content">{{ comment.text }}</p>
+                <!-- Comment show start -->
+                <div class="gp-comment-group">
+                    <div class="gp-total-comments">
+                        <a onclick="toggleDiv(this,{{ forloop.counter }})" class="gp-flat-link">
+                            Total {{ obj.comments.count }} comments.
+                        </a>
+                    </div>
 
-                            {% if comment.id in comment_list %}
-                                <button class="btn btn-danger"
-                                >Delete
-                                </button>
-                            {% endif %}
+                    <div id="{{ forloop.counter }}">
+                        {% for comment in obj.comments.all %}
+                            <div class="gp-comment">
+                                <p class="gp-username"><a
+                                        href="{% url 'user_profile' comment.author.username %}">{{ comment.author.username }}</a>
+                                </p>
+                                <p class="gp-date">{{ comment.created_date }}</p>
+                                <p class="gp-content">{{ comment.text }}</p>
 
+                                {% if comment.id in comment_list %}
+                                    <div class="bg-margin-top-10">
+                                        <button class="btn btn-danger">
+                                            Delete
+                                        </button>
+                                    </div>
+                                {% endif %}
+
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <!-- Comment show end -->
+
+
+                    <!-- Adding a comment part start -->
+
+                    <form id="add_comment{{ forloop.counter }}" data-id={{ obj.id }} method="POST" class="gp-form-story-comment">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <textarea class="form-control" rows="1" id="text{{ forloop.counter }}" maxlength="1000" name="text" required=""></textarea>
                         </div>
-                    {% endfor %}
+
+                        <button type="submit" class="btn btn-default" onclick="commentDiv({{ forloop.counter }})">
+                            Give Comment
+                        </button>
+                    </form>
+
+                    <!-- Adding-Comment part end -->
                 </div>
-                <!-- Comment show end -->
-
-
-                <!-- Adding a comment part start -->
-
-                <form id="add_comment{{ forloop.counter }}" data-id={{ obj.id }} method="POST" class="gp-form">
-                    {% csrf_token %}
-                    <textarea cols="40" rows="1" id="text{{ forloop.counter }}" maxlength="1000" name="text"
-                              required=""></textarea>
-                    <button type="submit" class="btn btn-default" onclick="commentDiv({{ forloop.counter }})">Asq
-                        Question
-                    </button>
-                </form>
-
-
-                <!-- Adding-Comment part end -->
             </div>
         {% endfor %}
 
-        <a href="{% url 'story_share' division page %}" class="btn btn-primary btn-block">Share Your Tour Story</a>
+        <div class="gp-center">
+            <a href="{% url 'story_share' division page %}" class="btn btn-lg btn-primary">Share Your Tour Story</a>
+        </div>
 
     {% else %}
-        <h3>Sorry no stories Shared yet!</h3>
+
+        <div class="jumbotron gp-jumbotron">
+            <h1>Sorry no stories Shared yet!</h1>
+        </div>
+        <div class="container-fluid gp-container-normal">
+            <div class="gp-center">
+                <a href="{% url 'story_share' division page %}" class="btn btn-lg btn-primary">Share Your Tour Story</a>
+            </div>
+        </div>
+
     {% endif %}
     <script>
 
-        function toggleDiv(divId) {
-            $("#" + divId).toggle();
+        function toggleDiv(element, divId) {
+            $("#" + divId).slideToggle();
+            {#            $(element).slideUp();#}
         }
 
 
@@ -155,7 +181,6 @@
                     success: function () {
                         // alert("Created a New Comment");
                         $("#" + formId).load(" #" + formId);
-
                     }
                 });
             });
