--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,24 +1,29 @@
 {% extends 'app1/base.html' %}
 
 {% block body_block %}
+    <div class="jumbotron gp-jumbotron">
+        <h1>Please Login!</h1>
+    </div>
 
-    <form class="gp-form" role="form" method="post" action=".">
-        {% csrf_token %}
+    <div class="container-fluid gp-container-normal">
 
-        <h1 class="gp-page-title">Please Log in</h1>
+        <form class="gp-form" role="form" method="post" action=".">
+            {% csrf_token %}
 
-        <div class="form-group">
-            <label for="id_username">Your Username</label>
-            <input class="form-control" placeholder="Username" id="id_username" name="username" type="text" required
-                   autofocus=""/>
-        </div>
-        <div class="form-group">
-            <label for="id_username">Your Password</label>
-            <input type="password" class="form-control" placeholder="Password" id="id_username" name="password"
-                   required/>
-        </div>
-        <button class="btn btn-primary" type="submit" value="Submit">Sign in</button>
-    </form>
+            <div class="form-group">
+                <label for="id_username">Your Username</label>
+                <input class="form-control" placeholder="Your Username" id="id_username" name="username" type="text" required
+                       autofocus=""/>
+            </div>
+            <div class="form-group">
+                <label for="id_username">Your Password</label>
+                <input type="password" class="form-control" placeholder="Your Password" id="id_username" name="password"
+                       required/>
+            </div>
+            <button class="btn btn-primary btn-block" type="submit" value="Submit">Log In</button>
+        </form>
+
+    </div>
 
 {% endblock %}
 
