--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -2,36 +2,42 @@
 
 
 {% block body_block %}
-    <form class="gp-form" role="form" method="post" action=".">
-        {% csrf_token %}
+    <div class="jumbotron gp-jumbotron">
+        <h1>Join with us!</h1>
+    </div>
 
-        <h1 class="gp-page-title">Sign Up Here</h1>
+    <div class="container-fluid gp-container-normal">
+        <form class="gp-form" role="form" method="post" action=".">
+            {% csrf_token %}
 
-        <div class="form-group">
-            <label class="required" for="id_username">
-                Username:</label>
-            <input class="form-control" id="id_username" maxlength="30" name="username" type="text" required/>
-            <span class="help-block">Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
+            <div class="form-group">
+                <label class="required" for="id_username">Username</label>
+                <input aria-describedby="helpUsername" class="form-control" placeholder="Username" id="id_username" maxlength="30"
+                       name="username" type="text" required/>
+                <span id="helpUsername" class="help-block">Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
 
-        </div>
-        <div class="form-group">
-            <label class="required" for="id_email">E-mail:</label>
-            <input class="form-control" id="id_email" name="email" type="email" required/>
+            </div>
+            <div class="form-group">
+                <label class="required" for="id_email">Your E-mail</label>
+                <input class="form-control" placeholder="Your e-mail" id="id_email" name="email" type="email" required/>
 
-        </div>
-        <div class="form-group"><label class="required" for="id_password1">
-            Password:</label>
-            <input class="form-control" id="id_password1" name="password1" type="password" required/>
+            </div>
+            <div class="form-group"><label class="required" for="id_password1">Password</label>
+                <input class="form-control" placeholder="Password" id="id_password1" name="password1" type="password" required/>
 
-        </div>
-        <div class="form-group">
-            <label class="required" for="id_password2">Password confirmation:</label>
-            <input class="form-control" id="id_password2" name="password2" type="password" required/>
-            <span class="help-block">Enter the same password as before, for verification.</span>
+            </div>
+            <div class="form-group">
+                <label class="required" for="id_password2">Password (Again)</label>
+                <input aria-describedby="helpRePassword" class="form-control" placeholder="Enter the password again" id="id_password2"
+                       name="password2" type="password"
+                       required/>
+                <span id="helpRePassword" class="help-block">Enter the same password as before, for verification.</span>
 
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Join</button>
+        </form>
+
+    </div>
     {#    <form method="post" action="">#}
     {#        {% csrf_token %}#}
     {#        {{ form.as_p }}#}
