One line corrected from division details page.. -_-

--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -3,7 +3,7 @@
 
 {% block body_block %}
     <div class="jumbotron gp-jumbotron">
-        <h1>Welcome {{ user.username }}!</h1>
+        <h1>All the Place of {{ division_name }}!</h1>
     </div>
 
     {% if user.is_authenticated %}
